--- a/index.html
+++ b/index.html
@@ -1,26 +1,19 @@
-<html>
-  <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Comic Book Theme</title>
     <script src="./assets/bootstrap/popperjs.js"></script>
     <script src="./assets/bootstrap/bootstrap.min.js"></script>
     <script src="script.js"></script>
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="./assets/bootstrap/bootstrap.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="./assets/bootstrap/variables.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="./assets/bootstrap/comic-book-theme.css"
-    />
+    <link rel="stylesheet" type="text/css" href="./assets/bootstrap/bootstrap.css"/>
+    <link rel="stylesheet" type="text/css" href="./assets/bootstrap/variables.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/bootstrap/comic-book-theme.css"/>
   </head>
 
-  <body>
+  <body class="p-2">
     <br /><br />
     <!-- Navbar
       ================================================== -->
@@ -455,9 +448,6 @@
         <div class="col-lg-12">
           <div class="bs-component">
             <div class="d-grid gap-2">
-              <button class="btn btn-lg btn-primary cb__button" type="button">
-                Block button
-              </button>
               <button class="btn btn-lg btn-primary cb__button" type="button">
                 Block button
               </button>
@@ -1359,11 +1349,11 @@
         <div class="col-lg-6">
           <h2 id="nav-pills">Pills</h2>
           <div class="bs-component">
-            <ul class="nav nav-pills">
+            <ul class="nav nav-pills cb__nav-pills">
               <li class="nav-item">
-                <a class="nav-link active" href="#">Active</a>
+                <a class="nav-link nav-link-warning active" href="#">Active</a>
               </li>
-              <li class="nav-item dropdown">
+              <li class="nav-item dropdown nav-link-secondary ">
                 <a
                   class="nav-link dropdown-toggle"
                   data-bs-toggle="dropdown"
@@ -1442,8 +1432,8 @@
             </ol>
           </div>
         </div>
-
-        <div class="col-lg-6">
+        
+        <div class="col-lg-6 pt-2">
           <h2 id="pagination">Pagination</h2>
           <div class="bs-component">
             <div>
